step3 - download Mongodb Community server in msi
step4 - download mongoDB shell for server
step5 - open cmd and run command mongod if it direct to path and show error 
step6- create data folder in c directory this data folder create db folder 
step7 - run command mongod if not direct to starting path server is run 
step8 - run mongosh (powershell command)

leccture - 30 
   connect Mongodb with node js

step1 = serach mongodb npm  - and then you will write npm i mongodb

step2 = go there documentation and read it that how it connect


lecture31 - Read data from Mongodb
            hum db collection ki alag sai file banaigai 
            because last lecture we had connect databse 
            suppose we want to create many functions for many difference database
            again and again we will not create database  because it take time cunsuming process but does not take enough time only 
            take 3 to 5 microsec 
            but compare to other code ,he take time so we keep only one collection

         i have one query in my mind,how i will create db.collection  file
         answer its simple  - 
         step1 - create file mongodb.js
         step2  - break index.js code in functions so that you don't confuze




lecture 32 - in this lecture we have create insert file for insert data nodejs to mongoDB
 lecture 33 - in this lecture data have updated using node js to mongoDB
 lecture -34 - this lecture , we have created delete.js file and data has deleted by using deleted method deletedMany

lecture35 - Basic api with mongodb
    haum kabhi bhi api sai body pass nahi kar sktai h

lecture36 - Post api with Mongodb
step1 - now, we we are wrting data in postman and send to nodejs
        but i have one question how to send daya and  how i will find data in node js recive or not
        whenever i get data to postman, we use middleware 
        app.use() method
        app.use(express.json()) because over data will be enable
        













